--- a/src/app/components/create-school/create-school.component.html
+++ b/src/app/components/create-school/create-school.component.html
@@ -15,7 +15,7 @@
             <button class="btn btn-secondary me-2" type="reset" (click)="resetForm(schoolForm)">
                 <i class="fas fa-sync-alt"></i> Resetear
             </button>
-            <button class="btn btn-secondary" type="button" routerLink="/">
+            <button class="btn btn-secondary" type="button" routerLink="/list-place">
               <i class="fas fa-hand-point-left"></i> Cancelar
           </button>
           </div>
