--- a/src/app/components/list-place/list-place.component.html
+++ b/src/app/components/list-place/list-place.component.html
@@ -3,7 +3,7 @@
       <!-- table -->
       <div class="col-md-12">
           <div class="inner">
-              <h3>Lugares</h3>
+              <h3>Canchas deportivas</h3>
               <a class="btn btn-primary text-white add" routerLink="/add-place">
                 <i class="fas fa-user-plus"></i> Agregar
               </a>
@@ -12,19 +12,18 @@
                       <tr>
                           <th scope="col">#</th>
                           <th scope="col">Nombre</th>
-                          <th scope="col">Direccion</th>
+                          <th scope="col">Dirección</th>
                           <th scope="col">Action</th>
                       </tr>
                   </thead>
                   <tbody>
-                      <tr *ngFor="let item of placeList">
-                          <th scope="row">{{item.id}}</th>
+                      <tr *ngFor="let item of dataList; index as i">
+                          <th scope="row">{{i+1}}</th>
                           <td>{{item.name}}</td>
                           <td>{{item.address}}</td>
-                          <td>{{item.created_at}}</td>
                           <td>
-                              <button type="button" class="btn btn-success btn-sm move-right" (click)="oneEdit(item)">Edit</button>
-                              <button type="button" class="btn btn-danger btn-sm" (click)="deletePlaces(item.id)" >Remove</button>
+                              <button type="button" class="btn btn-success btn-sm move-right" (click)="onEdit(item)">Edit</button>
+                              <button type="button" class="btn btn-danger btn-sm" (click)="onDelete(item.id)">Remove</button>
                           </td>
                       </tr>
                   </tbody>
@@ -33,3 +32,4 @@
       </div>
   </div>
 </div>
+
